--- a/client/src/scss/common/_animations.scss
+++ b/client/src/scss/common/_animations.scss
@@ -3,6 +3,7 @@
     transform: translateY(-$distance);
     -webkit-transform: translateY(-$distance);
     animation: fadeInDown $animation-durration ease $animation-delay forwards;
+    -webkit-animation: fadeInDown $animation-durration ease $animation-delay forwards;
 }
 
 @mixin fadeInUpAnimation($animation-delay: 0s, $animation-durration: 2s, $distance: 100%) {
@@ -10,6 +11,7 @@
     transform: translateY($distance);
     -webkit-transform: translateY($distance);
     animation: fadeInUp $animation-durration ease $animation-delay forwards;
+    -webkit-animation: fadeInUp $animation-durration ease $animation-delay forwards;
 }
 
 @mixin smoothTransitionHorizontalAnimation($direction: -100%, $durration: 1.5s) {
@@ -17,23 +19,26 @@
     transform: translateX($direction);
     -webkit-transform: translateX($direction);
     animation: smoothTransition $durration ease forwards;
+    -webkit-animation: smoothTransition $durration ease forwards;
 }
 
 @mixin smoothTransitionVerticalAnimation($directionX: -100%, $directionY: -100%, $durration: 1.5s) {
     opacity: 0;
-    filter: blur(10px);
     transform: translateY($directionY) translateX($directionX);
     -webkit-transform: translateY($directionY) translateX($directionX);
     animation: smoothTransitionVertical $durration ease forwards;
+    -webkit-animation: smoothTransitionVertical $durration ease forwards;
 }
 
 @mixin smoothAppearanceAnimation($durration: .5s) {
     opacity: 1;
     animation: smoothAppearance $durration ease-in;
+    -webkit-animation: smoothAppearance $durration ease-in;
 }
 
 @mixin zoomInAnimation($durration: 5s) {
     animation: zoomIn $durration linear infinite;
+    -webkit-animation: zoomIn $durration linear infinite;
 }
 
 @keyframes fadeInDown {
@@ -42,6 +47,7 @@
         transform: translateY(0);
         -webkit-transform: translateY(0);
         transform: skew(-19deg);
+        -webkit-transform: skew(-19deg);
     }
 }
 
@@ -56,7 +62,6 @@
 @keyframes smoothTransition {
     to {
         opacity: 1;
-        filter: blur(0);
         transform: translateX(0) translateY(0);
         -webkit-transform: translateX(0) translateY(0);
     }
@@ -65,7 +70,6 @@
 @keyframes smoothTransitionVertical {
     to {
         opacity: 1;
-        filter: blur(0);
         transform: translateY(0) translateX(0);
         -webkit-transform: translateY(0) translateX(0);
     }
